# FerrumC Project workspace
#
# Layout of this file:
# - Members of the workspace.
# - Profile compilation settings.
# - Workspace lints
# - Workspace dependencies.


cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"

#================= Members =================#
members = [
    "src/adapters/anvil",
    "src/adapters/nbt",
    "src/app",
    "src/base/macros",
    "src/base/general_purpose",
    "src/base/logging",
    "src/base/profiling",
    "src/base/threadpool",
    "src/bin",
    "src/commands",
    "src/components",
    "src/core",
    "src/dashboard",
    "src/data",
    "src/default_commands",
    "src/entities",
    "src/game_systems",
    "src/game_systems/src/background",
    "src/game_systems/src/mobs",
    "src/game_systems/src/packets",
    "src/game_systems/src/physics",
    "src/game_systems/src/player",
    "src/game_systems/src/world",
    "src/inventories",
    "src/messages",
    "src/net/codec",
    "src/net/encryption",
    "src/net/protocol",
    "src/net/runtime",
    "src/particles",
    "src/performance",
    "src/physics",
    "src/plugins",
    "src/registry",
    "src/resources",
    "src/scheduler",
    "src/state",
    "src/storage",
    "src/text",
    "src/utils",
    "src/world",
    "src/world/format",
    "src/world/db",
    "src/world/gen",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

#================== Lints ==================#
[workspace.lints.rust]
unsafe_code = "allow"
unused_unsafe = "deny"
#unsafe_op_in_unsafe_fn = "deny"
#unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
keyword_idents_2018 = "deny"
keyword_idents_2024 = "deny"
missing_abi = "deny"
future_incompatible = { level = "deny", priority = -1 }

[workspace.lints.clippy]
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_ptr_alignment = "deny"
match_bool = "deny"
mut_mut = "deny"
wildcard_dependencies = "deny"
redundant_type_annotations = "deny"
infinite_loop = "deny"

#================= Profile =================#
[profile.profiling]
inherits = "release"
debug = true

[profile.release]
debug = true

[profile.hyper]
inherits = "release"
strip = "symbols"
lto = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1

[profile.bench]
debug = true

#=============== Dependencies ==============#
[workspace.dependencies]
# Workspace members
ionic-app = { path = "src/app" }
ionic-anvil = { path = "src/adapters/anvil" }
ionic-config = { path = "src/config" }
ionic-core = { path = "src/core" }
ionic-default-commands = { path = "src/default_commands" }
ionic-commands = { path = "src/commands" }
ionic-general-purpose = { path = "src/base/general_purpose" }
ionic-logging = { path = "src/base/logging" }
ionic-macros = { path = "src/base/macros" }
ionic-nbt = { path = "src/adapters/nbt" }
ionic-net-runtime = { path = "src/net/runtime" }
ionic-performance = { path = "src/performance" }
ionic-codec = { path = "src/net/codec" }
ionic-protocol = { path = "src/net/protocol" }
ionic-encryption = { path = "src/net/encryption" }
ionic-plugins = { path = "src/plugins" }
ionic-profiling = { path = "src/base/profiling" }
ionic-registry = { path = "src/registry" }
ionic-scheduler = { path = "src/scheduler" }
ionic-state = { path = "src/state" }
ionic-storage = { path = "src/storage" }
ionic-text = { path = "src/text" }
ionic-threadpool = { path = "src/base/threadpool" }
ionic-utils = { path = "src/utils" }
ionic-world = { path = "src/world" }
ionic-world-gen = { path = "src/world/gen" }
ionic-world-format = { path = "src/world/format" }
ionic-inventories = { path = "src/inventories" }
ionic-data = { path = "src/data" }
ionic-components = { path = "src/components" }
ionic-dashboard = { path = "src/dashboard" }
ionic-messages = { path = "src/messages" }
ionic-entities = { path = "src/entities" }
ionic-physics = { path = "src/physics" }
ionic-particles = { path = "src/particles" }
ionic-resources = { path = "src/resources" }
ionic-game-systems = { path = "src/game_systems" }

# Asynchronous
tokio = { version = "1.49.0", features = [
    "macros",
    "net",
    "rt",
    "sync",
    "time",
    "io-util",
    "test-util",
    "rt-multi-thread"
], default-features = false }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing-tracy = { version = "0.11.4", features = ["timer-fallback", "ondemand", "fibers", "context-switch-tracing", "delayed-init"] }
log = "0.4.29"
tracy-client = "0.18.4"

# Concurrency/Parallelism
parking_lot = "0.12.5"
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
rusty_pool = "0.7.0"
crossbeam-queue = "0.3.12"

# Network
reqwest = { version = "0.13.1", features = ["json", "native-tls", "blocking", "http2"], default-features = false }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Cryptography
rand = "0.8.5"
fnv = "1.0.7"
wyhash = "0.6.0"
ahash = "0.8.12"
rsa = { version = "0.9.9" }
aes = { version = "0.8.4" }
cfb8 = "0.8.1"
sha1 = "0.10.6"
num-bigint = "0.4.6"

# Encoding/Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_derive = "1.0.228"
base64 = "0.22.1"

bitcode = "0.6.9"
bitcode_derive = "0.6.9"
toml = "0.9.11"
craftflow-nbt = "2.1.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
simd-json = "0.17.0"
bytemuck = { version = "1.24.0", features = ["extern_crate_alloc", "derive"] }
serde_yaml_ng = "0.10.0"

# Bit manipulation
byteorder = "1.5.0"

# Data types
dashmap = "7.0.0-rc2"
uuid = { version = "1.19.0", features = ["v4", "v3", "serde"] }
indexmap = { version = "2.13.0", features = ["serde"] }
bimap = "0.6.3"

# Macros
lazy_static = "1.5.0"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["extra-traits"] }
proc-macro2 = "1.0.106"
paste = "1.0.15"
maplit = "1.0.2"
macro_rules_attribute = "0.2.2"

# Magic
dhat = "0.3.3"
ctor = "0.6.3"

# Compression/Decompression
yazi = "0.2.1"

# Database
heed = "0.22.1-nested-rtxns-6"

# CLI
clap = { version = "4.5.54", features = ["derive", "env"] }
indicatif = "0.18.3"
colored = "3.1.1"
ratatui = "0.30.0"
tui-logger = { version = "0.18.1", features = ["tracing-support", "crossterm"] }

# Misc
deepsize = "0.2.0"
page_size = "0.6.0"
enum-ordinalize = "4.3.2"
regex = "1.12.2"
noise = "0.9.0"
ctrlc = "3.5.1"
num_cpus = "1.17.0"
typename = "0.1.2"
bevy_ecs = { version = "0.18.0", features = ["multi_threaded", "trace", "debug"], default-features = false }
bevy_math = "0.18.0"
once_cell = "1.21.3"
include_dir = "0.7.4"
mime_guess = "2.0.5"
heck = "0.5.0"
crossterm = "0.29.0"
ratatui-core = "0.1.0"
tui-input = "0.15.0"
unicode-width = "0.2.2"

# I/O
memmap2 = "0.9.9"
tempfile = "3.24.0"

# Benchmarking
criterion = { version = "0.7.0", features = ["html_reports"] }

phf = { version = "0.11", features = ["macros"] }
phf_codegen = { version = "0.11" }

# Web server
axum = { version = "0.8.8", features = ["tokio", "ws"] }

# Stats
sysinfo = { version = "0.38.0", default-features = false, features = ["system"] }
dir-size = "0.1.1"

[profile.dev.package.yazi]
opt-level = 3

[profile.dev.package.bevy_ecs]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.windows]
rustflags = ["-Zhint-mostly-unused"]
opt-level = 0

[profile.dev.package.windows-sys]
rustflags = ["-Zhint-mostly-unused"]
opt-level = 0

[profile.dev.package.tokio]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.glam]
rustflags = ["-Zhint-mostly-unused"]

[profile.dev.package.reqwest]
rustflags = ["-Zhint-mostly-unused"]
