[package]
name = "temper-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
temper-nbt = { workspace = true }
temper-macros = { workspace = true }
temper-codec = { workspace = true }
temper-config = { workspace = true }
bevy_ecs = { workspace = true }
temper-core = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }
maplit = { workspace = true }

[lints]
workspace = true
