[package]
name = "ionic-commands"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
ionic-text = { workspace = true }
ionic-core = { workspace = true }
enum-ordinalize = { workspace = true }
ionic-macros = { workspace = true }
bevy_ecs = { workspace = true }
ionic-codec = { workspace = true }
regex = { workspace = true }
ionic-components = { workspace = true }
ionic-nbt = { workspace = true }
ionic-state = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies] # Needed for the ServerState mock... :concern:
ionic-world = { workspace = true }
