[package]
name = "temper-commands"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
temper-text = { workspace = true }
temper-core = { workspace = true }
enum-ordinalize = { workspace = true }
temper-macros = { workspace = true }
bevy_ecs = { workspace = true }
temper-codec = { workspace = true }
regex = { workspace = true }
temper-components = { workspace = true }
temper-nbt = { workspace = true }
temper-state = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies] # Needed for the ServerState mock... :concern:
temper-world = { workspace = true }
