[package]
name = "temper-components"
version = "0.1.0"
edition = "2021"
description = "Temper components"

[dependencies]
bevy_ecs = { workspace = true }
tokio = { workspace = true }

temper-inventories = { workspace = true }
temper-codec = { workspace = true }
temper-config = { workspace = true }
bitcode = { workspace = true }
bitcode_derive = { workspace = true }
temper-data = { workspace = true }
bevy_math = { workspace = true }
uuid = { workspace = true }
