[package]
name = "temper-config"
version = "0.1.0"
edition = "2021"
description = "Temper configuration utilities"

[dependencies]
toml = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
temper-general-purpose = { workspace = true }
lazy_static = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rayon = { workspace = true }
once_cell = { workspace = true }
figment = { workspace = true }
rand = { workspace = true }

[features]
# Whether the dashboard options are enabled
dashboard = []