[package]
name = "temper-default-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
temper-messages = { workspace = true }
temper-components = { workspace = true }
temper-commands = { workspace = true }
temper-macros = { workspace = true }
temper-text = { workspace = true }
temper-core = { workspace = true }
temper-net-runtime = { workspace = true }
temper-protocol = { workspace = true }
temper-performance = { workspace = true }
temper-codec = { workspace = true }
lazy_static = { workspace = true }
bimap = { workspace = true }
temper-nbt = { workspace = true }
temper-state = { workspace = true }
temper-resources = { workspace = true }

ctor = { workspace = true }
tracing = { workspace = true }
bevy_ecs = { workspace = true }
