[package]
name = "ionic-messages"
version = "0.1.0"
edition = "2021"
description = "Defines all Bevy ECS messages for FerrumC."

[dependencies]
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }

ionic-components = { workspace = true }
ionic-core = { workspace = true }
ionic-codec = { workspace = true }
ionic-inventories = { workspace = true }
ionic-entities = { workspace = true }
ionic-particles = { workspace = true }
ionic-world = { workspace = true }
ionic-commands = { workspace = true }
