[package]
name = "temper-messages"
version = "0.1.0"
edition = "2021"
description = "Defines all Bevy ECS messages for Temper."

[dependencies]
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }

temper-components = { workspace = true }
temper-core = { workspace = true }
temper-codec = { workspace = true }
temper-inventories = { workspace = true }
temper-particles = { workspace = true }
temper-commands = { workspace = true }
