[package]
name = "temper-particles"
edition.workspace = true
version.workspace = true

[dependencies]
temper-codec = { workspace = true }
temper-core = { workspace = true }
temper-inventories = { workspace = true }
temper-macros = { workspace = true }
tokio = { workspace = true }
temper-components = { workspace = true }

[lints]
workspace = true
