[package]
name = "temper-resources"
edition.workspace = true
version.workspace = true

[dependencies]
bevy_ecs = { workspace = true }
temper-performance = { workspace = true }
temper-net-runtime = { workspace = true }
crossbeam-channel = { workspace = true }
temper-state = { workspace = true }
temper-config = { workspace = true }

[lints]
workspace = true
