[package]
name = "temper-storage"
description = "Implements storage capabilities of Temper for world persistence and on-disk resource parsing."
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
heed = { workspace = true }
page_size = { workspace = true }
parking_lot = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
wyhash = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
path = "src/benches/storage.rs"
