[package]
name = "temper-utils"
description = "Collection of utilities for use within Temper codebase."
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
temper-logging = { workspace = true }
temper-profiling = { workspace = true }
temper-config = { workspace = true }
bevy_math = { workspace = true }