[package]
name = "temper-world"
description = "Temper specific world definition and implementation of a Minecraft World and related logic."
version = "0.1.0"
edition = "2021"

[dependencies]
temper-storage = { workspace = true }
temper-config = { workspace = true }
tracing = { workspace = true }
bitcode = { workspace = true }
temper-macros = { workspace = true }
temper-anvil = { workspace = true }
rayon = { workspace = true }
temper-general-purpose = { workspace = true }
indicatif = { workspace = true }
wyhash = { workspace = true }
temper-threadpool = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
temper-world-format = { workspace = true }
world-gen = { path = "./gen" }
world-db = { path = "./db" }
temper-core = { workspace = true }



[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "world_bench"
harness = false
path = "src/benches/world.rs"
