[package]
name = "temper-nbt"
version = "0.1.0"
edition = "2021"

[dependencies]

thiserror = { workspace = true }
temper-codec = { workspace = true }
tokio = { workspace = true }
temper-general-purpose = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

#================= Benches ==============#
[dev-dependencies]
criterion = { workspace = true }
temper-macros = { workspace = true }
fastnbt = { version = "2.6.0" }
simdnbt = { version = "0.9.0" }
crab_nbt = { version = "0.2.11" }
hematite-nbt = { version = "0.5.2" }
maplit = "1.0.2"

[[bench]]
name = "temper-nbt"
path = "benches/temper-nbt.rs"
harness = false
