[package]
name = "bin-import"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
temper-world = { workspace = true }
temper-threadpool = { workspace = true }
temper-config = { workspace = true }
bin-cli = { path = "../cli" }
temper-general-purpose = { workspace = true }