[package]
name = "bin-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]

temper-core = { workspace = true }
temper-inventories = { workspace = true }
temper-net-runtime = { workspace = true }
temper-plugins = { workspace = true }
temper-storage = { workspace = true }
temper-utils = { workspace = true }
temper-world = { workspace = true }
temper-world-format = { workspace = true }
temper-config = { workspace = true }
temper-state = { workspace = true }
temper-general-purpose = { workspace = true }
temper-threadpool = { workspace = true }
temper-commands = { workspace = true }
temper-scheduler = { workspace = true }
temper-performance = { workspace = true }
temper-protocol = { workspace = true }
temper-default-commands = { workspace = true }
temper-resources = { workspace = true }
temper-logging = { workspace = true }
temper-messages = { workspace = true }
temper-game-systems = { workspace = true }
temper-dashboard = { workspace = true, optional = true }

ctrlc = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bevy_ecs = { workspace = true }
crossbeam-channel = { workspace = true }
tokio = { workspace = true }
tui-input = { workspace = true }
crossterm = { workspace = true }
tui-logger = { workspace = true }

[features]
dashboard = ["dep:temper-dashboard"]