[package]
name = "bin-validate"
version = "0.1.0"
edition = "2024"

[dependencies]
temper-state = { workspace = true }
heed = { workspace = true }
yazi = { workspace = true }
temper-core = { workspace = true }
indicatif = { workspace = true }
bitcode = { workspace = true }
temper-world-format = { workspace = true }
temper-storage = { workspace = true }
type_hash = { workspace = true }
temper-components = { workspace = true }
uuid = { workspace = true }