[package]
name = "temper-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
temper-codec = { workspace = true }
temper-macros = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
temper-components = { workspace = true }
typename = { workspace = true }
yazi = { workspace = true }
temper-config = { workspace = true }
thiserror = { workspace = true }
temper-world-format = { workspace = true }
temper-core = { workspace = true }
bevy_ecs = { workspace = true }
temper-nbt = { workspace = true }
temper-text = { workspace = true }
temper-inventories = { workspace = true }
lazy_static = { workspace = true }
bitcode = { workspace = true }
base64 = { workspace = true }
temper-particles = { workspace = true }
crossbeam-channel = { workspace = true }
temper-commands = { workspace = true }
indexmap = { workspace = true }
temper-encryption = { path = "../encryption" }
bevy_math = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
serde_json = { workspace = true }
craftflow-nbt = { workspace = true }

[build-dependencies]
serde = { workspace = true }
walkdir = { workspace = true }
syn = { workspace = true }
serde_json = { workspace = true }