[package]
name = "temper-net-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
temper-protocol = { workspace = true }
temper-codec = { workspace = true }
bevy_ecs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
yazi = { workspace = true }
temper-config = { workspace = true }
temper-core = { workspace = true }
temper-macros = { workspace = true }
temper-encryption = { path = "../encryption" }
temper-state = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
temper-components = { workspace = true }
rand = { workspace = true }
temper-commands = { workspace = true }
reqwest = { workspace = true }
crossbeam-channel = { workspace = true }
temper-text = { workspace = true }