[package]
name = "world-db"
version = "0.1.0"
edition = "2024"

[dependencies]
temper-config = { workspace = true }
temper-storage = { workspace = true }
temper-core = { workspace = true }
tracing = { workspace = true }
wyhash = { workspace = true }
temper-world-format = { workspace = true }
bitcode = { workspace = true }
yazi = { workspace = true }