[package]
name = "temper-world-format"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode_derive = { workspace = true }
bitcode = { workspace = true }
temper-codec = { workspace = true }
temper-macros = { workspace = true }
deepsize = { workspace = true }
temper-core = { workspace = true }
macro_rules_attribute = { workspace = true }
serde_derive = { workspace = true }
temper-anvil = { workspace = true }
thiserror = { workspace = true }
yazi = { workspace = true }
temper-storage = { workspace = true }
temper-general-purpose = { workspace = true }
temper-nbt = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
tokio = { workspace = true }