[package]
name = "background"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }
temper-core = { workspace = true }
temper-net-runtime = { workspace = true }
temper-protocol = { workspace = true }
temper-components = { workspace = true }
temper-state = { workspace = true }
temper-config = { workspace = true }
temper-codec = { workspace = true }
tracing = { workspace = true }
temper-text = { workspace = true }
temper-messages = { workspace = true }
temper-inventories = { workspace = true }
temper-resources = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
temper-entities = { workspace = true }
temper-commands = { workspace = true }